--- a/eiac-misc-server/template/upload.html
+++ b/eiac-misc-server/template/upload.html
@@ -3,9 +3,11 @@
     <title>上传文件</title>
 </head>
 <body>
-<form enctype="multipart/form-data" action="http://127.0.0.1:8081/uploadreport" method="post">
+<form enctype="multipart/form-data" action="http://127.0.0.1:8081/upload" method="post">
   <input type="file" name="uploadfile" />
-  <input type="hidden" name="token" value="{{.}}"/>
+  <input type="hidden" name="token" value="{{.Token}}" />
+  <input type="hidden" name="fname" value="{{.Name}}" />
+  <input type="hidden" name="ftype" value="{{.Type}}" />
   <input type="submit" value="上传" />
 </form>
 </body>
